welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: not found: value COLOR
  setCouleurCorps(COLOR.black)
                  ^